# xkcd-936

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs  words.rs
src/license/: en.txt
