[package]
name = "random_word"
description = "Efficient functions for generating random words in many languages."
version = "0.5.2"
edition = "2024"
repository = "https://github.com/MitchellRhysHall/random_word"
license = "MIT"
categories = [
    "algorithms",
    "localization", 
    "internationalization"
]
keywords = [
    "random",
    "words",
    "generate",
    "multilingual",
    "english"
]
exclude = [
    "src/attr/*",
    "src/license/*",
    "src/txt/*",
    "build.rs"
]

readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true

[features]
de = []
en = []
es = []
fr = []
ja = []
ru = []
zh = []

[dependencies]
ahash = "^0.8"
paste = "^1"
brotli = "^8"
rand = "^0.9"

[build-dependencies]
brotli = "^8"
unicase = "^2"